--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "db:push": "npx drizzle-kit push"
+    "db:push": "npx drizzle-kit push",
+    "db:seed": "npx tsx --env-file=.env scripts/seed.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
